--- a/docs/Styles/website_styles.scss
+++ b/docs/Styles/website_styles.scss
@@ -22,6 +22,9 @@ $body-color: $brown; // page text
 $footer-bg: $yellow; // footer 
 $link-color: $pink; // hyperlinks 
 
+// The left hand sidebar
+$grid-sidebar-width: 450px !important;
+
 /*-- scss:rules --*/
 
 .title {
@@ -50,39 +53,5 @@ h1 {
   border-radius: 30px;
   letter-spacing: 5px;
   text-align: center;
-}
-
-/* columns for workshop schedule */
-.content-block {
-  padding-top: 0px;
-  padding-bottom: 5px;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-.features {
-  max-width: 720px;
-  padding-bottom: 2em;
-}
-
-.feature {
-  margin-top: 0px;
-}
-
-.features {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: 0 0 0 -10px;
-  width: calc(100% + 30px);
-}
-
-.feature {
-  width: calc(50% - 30px);
-  margin: 10px 0 0 30px;
-}
-
-.feature h3 {
-  margin-top: 0;
 }
 
