--- a/docs/Styles/website_styles.scss
+++ b/docs/Styles/website_styles.scss
@@ -4,11 +4,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 // Colors
-$yellow: #FDF5CE;
-$brown: #704744;
-$teal: #286d8d;
+$yellow: #ffffff;
+$brown: #704844;
+$teal: #225d82;
 $gray: #6C7567;
-$pink: #BC6484;
+$pink: #b24f7c;
 
 // Base document colors
 $navbar-bg: $yellow; // navbar
